[metadata]
name = napari-cool-tools-registration
version = attr: napari_cool_tools_registration.__version__
description = Plugin for registration of volumetric data or image stacks.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Otravezjj/napari-cool-tools-registration
author = John Jackson
author_email = jdjacks@post.harvard.edu
license = BSD-3-Clause
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Framework :: napari
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Image Processing
project_urls =
    Bug Tracker = https://github.com/Otravezjj/napari-cool-tools-registration/issues
    Documentation = https://github.com/Otravezjj/napari-cool-tools-registration#README.md
    Source Code = https://github.com/Otravezjj/napari-cool-tools-registration
    User Support = https://github.com/Otravezjj/napari-cool-tools-registration/issues

[options]
packages = find:
install_requires =
    numpy

python_requires = >=3.8
include_package_data = True
package_dir =
    =src

# add your package requirements here

[options.packages.find]
where = src

[options.entry_points]
napari.manifest =
    napari-cool-tools-registration = napari_cool_tools_registration:napari.yaml

[options.extras_require]
testing =
    tox
    pytest  # https://docs.pytest.org/en/latest/contents.html
    pytest-cov  # https://pytest-cov.readthedocs.io/en/latest/


[options.package_data]
* = *.yaml
